k8s/05-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ssp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.9
          ports:
            - containerPort: 9092
          readinessProbe:
            exec:
              command:
                - kafka-topics.sh
                - --bootstrap-server
                - localhost:9092
                - --list
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ssp
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
